# TMXeditor

./: .gitignore  README.md  default_shortcuts.json  pyproject.toml  tmxeditor.spec
.github/workflows/: build.yml
docs/: user_guide.md
src/tmxeditor/: __init__.py  __main__.py  config.py  dialogs.py  main.py  main_window.py  models.py  table_model.py  table_view.py  tmx_io.py  undo.py
src/tmxeditor/resources/: app_icon.icns
tests/: conftest.py  test_config.py  test_operations.py  test_tmx_io.py  test_undo.py
tests/fixtures/: malformed.tmx  metadata.tmx  realistic.tmx  small.tmx
